[tool.poetry]
name = "audio-viz-pi"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan.hilgart@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
numpy = "^1.21.0"
pyalsaaudio = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
